--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import Beneficios from '@/sections/aldea/Beneficios.astro'
-import Convocatoria from '@/sections/aldea/Convocatoria.astro'
+import Postulación from '@/sections/aldea/Postulación.astro'
 import Expediciones from '@/sections/aldea/Expediciones.astro'
 import Hero from '@/sections/aldea/Hero.astro'
 import Introduction from '@/sections/aldea/Introduction.astro'
-import Propósito from '@/sections/aldea/Propósito.astro'
+import Convocatoria from '@/sections/aldea/Convocatoria.astro'
 import Rutas from '@/sections/aldea/Rutas.astro'
 import Talleres from '@/sections/aldea/Talleres.astro'
 import Equipo from '@/sections/aldea/Equipo.astro'
@@ -17,12 +17,12 @@ import Auspicia from '@/sections/aldea/Auspicia.astro'
 <Layout title='Aldea | Arquitectura Cultural'>
   <Hero />
   <Introduction />
-  <Propósito />
-  <Talleres />
-  <Expediciones />
   <Convocatoria />
   <Beneficios />
+  <Talleres />
+  <Expediciones />
   <Rutas />
+  <Postulación />
   <Equipo />
   <Festividad />
   <Auspicia />
