--- a/src/sections/aldea/Festividad.astro
+++ b/src/sections/aldea/Festividad.astro
@@ -1,6 +1,6 @@
 <section
   id='festividad'
-  class='h-[62rem] md:h-[55rem] lg:h-[70rem] py-20 lg:py-28 px-10 bg-[url(/images/aldea/malecon-la-caleta.jpg)] bg-cover bg-center relative'
+  class='h-[65rem] md:h-[55rem] lg:h-[70rem] py-20 lg:py-28 px-10 bg-[url(/images/aldea/malecon-la-caleta.jpg)] bg-cover bg-center relative'
 >
   <div class='max-w-[50rem] mx-auto'>
     <img
@@ -9,16 +9,17 @@
       class='max-w-[12rem] md:max-w-[13.5rem] lg:max-w-[20rem] mx-auto mb-5'
     />
     <em class='w-max block mx-auto mb-8'>4, 5, y 6 dic. 2022</em>
-    <p class='text-[13px] md:text-[14.5px] lg:text-[15.5px] text-justify'>
+    <p
+      class='text-[14px] md:text-[14.5px] lg:text-[15.5px] text-justify font-medium leading-6 lg:leading-8'
+    >
       Chimbote, luego de siglos de formación, aún no celebra una fiesta propia,
       emblemática e integradora; que exprese el auténtico significado de su
       pasado, presente y futuro. Por ello, hoy celebramos su espíritu cultural
       con la riqueza de su historia, con sus valiosos emblemas, con sus
-      paisajismos de ensueño, con su apreciada gastronomía, con su arte popular,
-      con su legado deportivo, con su fuerza emprendedora y con la recuperación
-      de su ecología, presentando la primera edición de la Festividad de
-      Chimbote: Sueños de Libertad. Como un buen inicio para aspirar a ser un
-      nuevo atractivo turístico global.
+      paisajismos de ensueño, con su apreciada gastronomía, con su arte popular
+      y con la recuperación de su ecología, presentando la primera edición de la
+      Festividad de Chimbote: Sueños de Libertad, como un buen inicio para
+      aspirar a ser un nuevo atractivo turístico global.
     </p>
   </div>
 
