--- a/src/sections/aldea/Introduction.astro
+++ b/src/sections/aldea/Introduction.astro
@@ -1,31 +1,33 @@
-<section class='relative py-16 lg:py-28'>
+<section id='introduction' class='relative py-16 lg:py-28'>
   <div class='max-w-max mx-auto mb-8 text-center'>
-    <h2 class='text-3xl lg:text-5xl text-[#34CC66] font-medium leading-[1.2]'>
+    <h2
+      class='text-3xl lg:text-[3.5rem] text-[#34CC66] font-medium leading-[1.2]'
+    >
       Mística Ciudad
     </h2>
-    <em class='text-lg lg:text-2xl text-[#747474] lg:text-[#050505]'
+    <em class='text-lg lg:text-[1.7rem] text-[#747474] lg:text-[#050505]'
       >Hacia una arquitectura con identidad</em
     >
   </div>
   <p
-    class='max-w-[60rem] mx-auto text-[#282828] lg:columns-2 gap-10 text-justify px-8 mb-4 lg:mb-8'
+    class='max-w-[60rem] mx-auto text-[#282828] lg:columns-2 gap-10 text-justify px-8 mb-4 lg:mb-8 lg:text-lg'
   >
     Chimbote, una sociedad que surge con la construcción del ferrocarril, la
-    pesca a gran escala y la siderurgia. Industrias generadoras de trabajo
-    masivo, que atrajeron una explosiva migración que colapsó la infraestructura
-    urbana, con un acelerado crecimiento desbordado en su vasto paisajismo y
-    eclécticamente descontrolado en los acabados de sus construcciones; y que,
-    ante la urgencia de vivienda, imposibilitó su poblamiento armonioso y
-    sostenible, hasta nuestros días. Así, hemos heredado una ciudad sin una
-    mística arquitectónica definida en sus calles, en sus plazas y en sus
+    pesca a gran escala y la siderurgia. Industrias que generaron trabajo masivo
+    y que atrajeron una explosiva migración social que colapsó la
+    infraestructura urbana, con un acelerado crecimiento desbordado en su vasto
+    paisajismo y eclécticamente descontrolado en los acabados de sus
+    construcciones; y que, ante la urgencia de vivienda, imposibilitó su
+    poblamiento armonioso y sostenible, hasta nuestros días. Así, heredamos una
+    ciudad sin una mística arquitectónica en sus calles, en sus plazas y en sus
     edificaciones y con un valioso legado ancestral en sus aldeas rurales, que
-    va desapareciendo. Sin embargo, también hemos heredado una urbe con una muy
-    buena proyección en su urbe, con calles amplias y rectilíneas; una gran
-    oportunidad para diseñar espacios que incentiven la integración ciudadana,
-    promuevan la producción sustentable, brinden atractivos turísticos e
-    inspiren la convivencia pacífica. Desde el reconocimiento de sus propios
-    valores y patrimonios, hasta el logro de un nuevo estilo estético auténtico,
-    que defina nuestra identidad, a través de la arquitectura cultural.
+    va desapareciendo. Sin embargo, también hemos heredado una ciudad con muy
+    buena proyección en su urbe y con amplias calles. Una gran oportunidad para
+    diseñar espacios que incentiven la integración ciudadana, promuevan la
+    producción sustentable, brinden atractivos turísticos e inspiren la
+    convivencia pacífica. Desde el reconocimiento de sus propios valores y
+    patrimonios, hasta el logro de un nuevo estilo estético auténtico, que
+    defina nuestra identidad, a través de la arquitectura cultural.
   </p>
   <img src='/images/aldea/cinta.png' alt='cinta' class='absolute bottom-0' />
 </section>
