--- a/src/components/aldea/Heading.astro
+++ b/src/components/aldea/Heading.astro
@@ -9,12 +9,12 @@ const { title, subtitle, description } = Astro.props as Props
 ---
 
 <h2
-  class='text-3xl md:text-[2.15rem] lg:text-[3.4rem] font-medium lg:mb-[12px]'
+  class='text-3xl md:text-[2.15rem] lg:text-[3.5rem] font-medium lg:mb-[12px]'
 >
   {title}
 </h2>
 <em
-  class='text-lg md:text-xl lg:text-2xl mb-3 lg:mb-5 inline-block text-[#7B7B7B] lg:text-inherit'
+  class='text-lg md:text-xl lg:text-[1.7rem] mb-3 lg:mb-5 inline-block text-[#7B7B7B] lg:text-inherit'
   >{subtitle}
 </em>
 {description && <p class='text-base lg:text-lg'>{description}</p>}
