--- a/src/sections/aldea/Beneficios.astro
+++ b/src/sections/aldea/Beneficios.astro
@@ -2,10 +2,10 @@
 import Heading from '@/components/aldea/Heading.astro'
 
 const benefits = [
-  'Exoneración de pagos de colegiatura en el Colegio de Arquitectos del Perú, Regional Áncash',
-  'Certificado oficial de participación emitido por el Colegio de Arquitectos del Perú, Regional Áncash y la Organización Chimboteros',
   'Talleres gratuitos sobre arquitectura, branding,  cultura y turismo',
-  'Participación como protagonista en la conceptualización y diseño arquitectónico de la primera Festividad de Chimbote 2022'
+  'Participación como protagonista en la conceptualización y diseño arquitectónico de la primera Festividad de Chimbote 2022',
+  'Certificado de participación emitido por la Organización  Cultural Chimboteros.',
+  'Conformar un equipo multidisciplinario que desarrolle proyectos de innovación e impacto, con enfoque cultural y turístico.'
 ]
 ---
 
