--- a/src/sections/aldea/Expediciones.astro
+++ b/src/sections/aldea/Expediciones.astro
@@ -3,22 +3,29 @@ const expeditions = [
   {
     name: 'Alameda Chimbote',
     description:
-      'Seis kilómetros de parques urbanos como un espacio estratégico para lograr hacer interactuar socialmente a los jóvenes creativos de Chimbote para el desarrollo de proyectos compartidos.'
+      'Más de cinco kilómetros de parques como un espacio estratégico para hacer interactuar a los jóvenes creativos de Chimbote en el desarrollo de proyectos compartidos.'
   },
   {
     name: 'La Antigua Estación del Ferrocarril',
     description:
-      'Nuestro principal patrimonio cultural no cuenta con un proyecto integrado que conceptualice su gran valor histórico para desde ahí forjar la identidad cultural de Chimbote.'
+      'Nuestro principal patrimonio cultural no cuenta con un proyecto integrado que conceptualice su gran valor histórico, para desde ahí forjar la identidad cultural de Chimbote.'
   },
   {
     name: 'Humedales de Chimbote',
     description:
-      'La reserva ecológica urbana entre Chimbote y Nuevo Chimbote por revalorar desde sus artesanos, desde su fauna y desde su paisajismo, orientada hacia el turismo sostenible.'
+      'La reserva ecológica urbana entre Chimbote y Nuevo Chimbote por revalorar desde sus artesanos, desde su fauna y desde su paisajismo, orientada  hacia ebl turismo sostenile.'
   }
 ]
 ---
 
 <section id='expediciones' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
+  <div class='relative order-1 lg:order-none'>
+    <img src='/images/aldea/estatuas.jpg' alt='estatuas de niñas danzando' />
+    <small class='absolute bottom-4 left-5 text-xs text-[#eee]'>
+      La Casona de Garatea <br /> Jazmín Cuba / Fotear
+    </small>
+  </div>
+
   <div class='relative py-14 px-10 text-[#1A1A1A]'>
     <div
       class='w-[35rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
@@ -35,35 +42,24 @@ const expeditions = [
           class='text-lg lg:text-2xl inline-block mb-3 lg:mb-5 text-[#7B7B7B] lg:text-inherit'
           >Rutas urbanas e históricas</em
         >
-        <p>
+        <p class='lg:text-lg'>
           Recorridos urbanos para recorrer y analizar in situ los sitios y
           patrimonios culturales de la provincia del Santa
         </p>
       </div>
 
-      <ul class='w-full flex flex-col gap-10 mb-8'>
+      <ul class='w-full flex flex-col gap-5 mb-8'>
         {
           expeditions.map(({ name, description }, index) => (
             <li>
-              <h3 class='text-lg lg:text-base font-medium mb-1'>
+              <h3 class='text-lg font-medium mb-1'>
                 {index + 1 + ') ' + name}
               </h3>
-              <p class='text-base lg:text-sm'>{description}</p>
+              <p class='text-base lg:text-lg'>{description}</p>
             </li>
           ))
         }
       </ul>
-
-      <em class='text-[#777]'>
-        (*) Fechas por consensuar entre los participantes seleccionados.
-      </em>
     </div>
-  </div>
-
-  <div class='relative'>
-    <img src='/images/aldea/cabaña.jpg' alt='la casona de garatea' />
-    <small class='absolute bottom-4 left-5 text-xs text-[#eee]'>
-      La Casona de Garatea <br /> Jazmín Cuba / Fotear
-    </small>
   </div>
 </section>
