--- a/src/sections/aldea/Talleres.astro
+++ b/src/sections/aldea/Talleres.astro
@@ -9,13 +9,6 @@ const workshops = [
 ---
 
 <section id='talleres' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
-  <div class='relative order-1 lg:order-none'>
-    <img src='/images/aldea/estatuas.jpg' alt='estatuas de niñas danzando' />
-    <small class='absolute bottom-4 left-5 text-xs text-[#eee]'>
-      Escultura en el <br /> bulevar Isla Blanca <br /> David Aguedo / Fotear
-    </small>
-  </div>
-
   <div class='relative py-14 px-10'>
     <div
       class='w-[30rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
@@ -41,5 +34,11 @@ const workshops = [
         }
       </ol>
     </div>
+  </div>
+  <div class='relative'>
+    <img src='/images/aldea/cabaña.jpg' alt='la casona de garatea' />
+    <small class='absolute bottom-4 left-5 text-xs text-[#eee]'>
+      Escultura en el <br /> bulevar Isla Blanca <br /> David Aguedo / Fotear
+    </small>
   </div>
 </section>
