--- a/src/sections/home/Hero.astro
+++ b/src/sections/home/Hero.astro
@@ -16,7 +16,7 @@ const menuItems = [
   id='hero'
   class='h-screen lg:h-[105rem] bg-[url("/images/mobile/pescador-chimbotero.jpg")] lg:bg-[url("/images/chimbotero.jpg")] bg-cover bg-center'
 >
-  <Header menuItems={menuItems} />
+  <Header brandIcon='barquito' fb='chimboteros' menuItems={menuItems} />
 
   <div
     class='w-9/12 lg:w-5/12 h-28 lg:h-52 mx-auto top-44 relative bg-[url("/images/mobile/chimboteros-logo.png")] lg:bg-[url("/images/chimboteros-logo.png")] bg-contain bg-center bg-no-repeat'
