increase header logo font size and change relative position

--- a/src/sections/aldea/Hero.astro
+++ b/src/sections/aldea/Hero.astro
@@ -21,14 +21,14 @@ const menuItems = [
   <Header brandIcon='house' fb='aldeadelperu' menuItems={menuItems} />
 
   <div
-    class='max-w-[24rem] lg:max-w-[30rem] mx-auto relative top-24 lg:top-36 text-[#1A1A1A] text-center'
+    class='max-w-[24rem] lg:max-w-[28rem] mx-auto relative top-28 lg:top-44 text-[#1A1A1A] text-center'
   >
-    <h1 class='text-5xl lg:text-[5rem] font-medium'>Aldea</h1>
-    <em class='text-2xl lg:text-[2.4rem] mb-5 lg:mb-10 block'
+    <h1 class='text-5xl lg:text-[5.5rem] font-medium'>Aldea</h1>
+    <em class='text-2xl lg:text-[2.5rem] mb-5 lg:mb-12 block'
       >Arquitectura Cultural</em
     >
-    <p class='text-base lg:text-[1.3rem] mb-2.5 lg:mb-5'>
-      Soñamos con ciudades cuyos espacios sean en sí mismos vivencias turísticas
+    <p class='text-base lg:text-[1.4rem] mb-2.5 lg:mb-5 lg:leading-7'>
+      Soñamos con ciudades cuyos espacios<br /> sean en sí mismos vivencias turísticas
       por amar.
     </p>
     <a href='#introduction'>
