--- a/src/sections/aldea/Convocatoria.astro
+++ b/src/sections/aldea/Convocatoria.astro
@@ -5,11 +5,11 @@ import Heading from '@/components/aldea/Heading.astro'
 <section id='convocatoria' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
   <div class='relative py-14 px-10'>
     <div
-      class='w-[30rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
+      class='w-[45em] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
     >
       <div class='text-center lg:text-left mb-10'>
         <Heading title='Convocatoria' subtitle='Arquitectos' />
-        <p class='lg:text-lg'>
+        <p class='lg:text-2xl lg:leading-9'>
           La organización Chimboteros a través del proyecto Aldea convoca a
           jóvenes arquitectos , para ser parte de un equipo multidisciplinario
           que desarrolle proyectos de innovación en arquitectura,
@@ -23,7 +23,7 @@ import Heading from '@/components/aldea/Heading.astro'
 
   <div class='relative'>
     <img src='/images/aldea/casa.jpg' alt='casa en la caleta - chimbote' />
-    <small class='w-[7rem] absolute bottom-2 left-5 text-xs'>
+    <small class='w-[8rem] absolute bottom-2 left-5 text-xs lg:text-sm'>
       Las Casonas de la Corporación Peruana del Santa, Chimbote <br /> Luis Mariños
       / Fotear
     </small>
