--- a/src/sections/aldea/Festividad.astro
+++ b/src/sections/aldea/Festividad.astro
@@ -2,7 +2,7 @@
   id='festividad'
   class='h-[65rem] md:h-[55rem] lg:h-[70rem] py-20 lg:py-28 px-10 bg-[url(/images/aldea/malecon-la-caleta.jpg)] bg-cover bg-center relative'
 >
-  <div class='max-w-[50rem] mx-auto'>
+  <div class='max-w-[54rem] mx-auto'>
     <img
       src='/images/aldea/suenos-de-libertad.png'
       alt='slogan sueños de libertad'
@@ -10,7 +10,7 @@
     />
     <em class='w-max block mx-auto mb-8'>4, 5, y 6 dic. 2022</em>
     <p
-      class='text-[14px] md:text-[14.5px] lg:text-[15.5px] text-justify font-medium leading-6 lg:leading-8'
+      class='text-[14px] md:text-[14.5px] lg:text-[1.1rem] text-justify font-medium leading-6 lg:leading-8'
     >
       Chimbote, luego de siglos de formación, aún no celebra una fiesta propia,
       emblemática e integradora; que exprese el auténtico significado de su
@@ -23,7 +23,7 @@
     </p>
   </div>
 
-  <small class='absolute bottom-4 left-5 text-xs text-[#eee]'>
+  <small class='absolute bottom-4 left-5 text-xs lg:text-sm text-[#eee]'>
     El histórico malecón <br /> de La Caleta, Chimbote <br /> David Aguedo / Fotear
   </small>
 </section>
