--- a/src/sections/aldea/Introduction.astro
+++ b/src/sections/aldea/Introduction.astro
@@ -1,16 +1,16 @@
 <section id='introduction' class='relative py-16 lg:py-28'>
   <div class='max-w-max mx-auto mb-8 text-center'>
     <h2
-      class='text-3xl lg:text-[3.5rem] text-[#34CC66] font-medium leading-[1.2]'
+      class='text-3xl lg:text-[4rem] text-[#34CC66] font-medium leading-[1.2]'
     >
       Mística Ciudad
     </h2>
-    <em class='text-lg lg:text-[1.7rem] text-[#747474] lg:text-[#050505]'
+    <em class='text-lg lg:text-[2rem] text-[#747474] lg:text-[#050505]'
       >Hacia una arquitectura con identidad</em
     >
   </div>
   <p
-    class='max-w-[60rem] mx-auto text-[#282828] lg:columns-2 gap-10 text-justify px-8 mb-4 lg:mb-8 lg:text-lg'
+    class='max-w-[70rem] mx-auto text-[#282828] lg:columns-2 gap-10 text-justify px-8 mb-4 lg:mb-8 lg:text-xl lg:leading-8'
   >
     Chimbote, una sociedad que surge con la construcción del ferrocarril, la
     pesca a gran escala y la siderurgia. Industrias que generaron trabajo masivo
