--- a/src/sections/aldea/Auspicia.astro
+++ b/src/sections/aldea/Auspicia.astro
@@ -1,8 +1,8 @@
 <section id='auspicia' class='relative py-20 lg:py-32 bg-[#000]'>
   <div
-    class='max-w-[12rem] md:max-w-[13rem] lg:max-w-[15rem] mx-auto text-center mb-8'
+    class='max-w-[12rem] md:max-w-[13rem] lg:max-w-[22rem] mx-auto text-center mb-8'
   >
-    <h2 class='text-xl lg:text-2xl text-white mb-5'>Auspicia:</h2>
+    <h2 class='text-xl lg:text-4xl text-white mb-5 lg:mb-7'>Auspicia:</h2>
     <img
       src='/images/aldea/logo-del-colegio-de-arquitectos-chimbote.png'
       alt='logo del colegio de arquitectos de chimbote'
