--- a/src/sections/aldea/Talleres.astro
+++ b/src/sections/aldea/Talleres.astro
@@ -11,7 +11,7 @@ const workshops = [
 <section id='talleres' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
   <div class='relative py-14 px-10'>
     <div
-      class='w-[30rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
+      class='w-[40rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
     >
       <div class='text-center lg:text-left mb-10'>
         <Heading
@@ -25,10 +25,10 @@ const workshops = [
         {
           workshops.map((workshop, index) => (
             <li>
-              <h3 class='capitalize text-lg lg:text-xl font-medium mb-1'>
+              <h3 class='capitalize text-lg lg:text-2xl font-medium mb-1'>
                 {`${index + 1}) Taller 0${index + 1}:`}
               </h3>
-              <p class='text-base lg:text-lg'>{workshop}</p>
+              <p class='text-base lg:text-2xl lg:leading-9'>{workshop}</p>
             </li>
           ))
         }
@@ -37,7 +37,7 @@ const workshops = [
   </div>
   <div class='relative'>
     <img src='/images/aldea/cabaña.jpg' alt='la casona de garatea' />
-    <small class='absolute bottom-4 left-5 text-xs text-[#eee]'>
+    <small class='absolute bottom-4 left-5 text-xs lg:text-sm text-[#eee]'>
       Escultura en el <br /> bulevar Isla Blanca <br /> David Aguedo / Fotear
     </small>
   </div>
