--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,7 +54,7 @@
   }
 
   .aldea-form-input {
-    @apply rounded-full py-2 px-4 bg-white border border-[#1A1A1A] w-full outline-none;
+    @apply rounded-full py-2 px-4 lg:py-3 lg:px-5 bg-white border border-[#1A1A1A] w-full outline-none lg:text-lg;
   }
 
   .aldea-form-label {
@@ -64,6 +64,6 @@
 
 @layer utilities {
   .absolute-center {
-    @apply absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2;
+    @apply absolute top-[14%] left-1/2 -translate-x-1/2;
   }
 }
