change color to team members names

--- a/src/sections/aldea/Equipo.astro
+++ b/src/sections/aldea/Equipo.astro
@@ -57,7 +57,7 @@ const teamMembers = [
             <img src={`/images/aldea/team/${name}.png`} alt={name} />
 
             <div>
-              <h3 class='text-[#1CC854] text-xl lg:text-2xl font-medium'>
+              <h3 class='text-[#CD8B1C] text-xl lg:text-2xl font-medium'>
                 {name}
               </h3>
               <em class='text-[#7B7B7B] lg:text-xl'>{field}</em>
