change order of images

--- a/src/sections/aldea/Expediciones.astro
+++ b/src/sections/aldea/Expediciones.astro
@@ -20,9 +20,13 @@ const expeditions = [
 
 <section id='expediciones' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
   <div class='relative order-1 lg:order-none'>
-    <img src='/images/aldea/estatuas.jpg' alt='estatuas de niñas danzando' />
+    <img
+      src='/images/aldea/valle.jpg'
+      alt='complejo arqueológico El Castillo, Chimbote'
+    />
     <small class='absolute bottom-4 left-5 text-xs lg:text-sm text-[#eee]'>
-      La Casona de Garatea <br /> Jazmín Cuba / Fotear
+      El complejo <br /> arqueológico El Castillo, <br /> Chimbote. <br /> David
+      Aguedo / Fotear
     </small>
   </div>
 
