--- a/src/sections/aldea/Rutas.astro
+++ b/src/sections/aldea/Rutas.astro
@@ -58,13 +58,9 @@ const routes = [
   </div>
 
   <div class='relative'>
-    <img
-      src='/images/aldea/estacion-del-ferrocarril.jpg'
-      alt='estación del ferrocarril de chimbote'
-    />
+    <img src='/images/aldea/cabaña.jpg' alt='la casona de garatea' />
     <small class='absolute bottom-4 left-5 text-xs lg:text-sm text-[#eee]'>
-      Segunda nave <br /> de la antigua Estación <br /> del Ferrocarril, <br /> Joan
-      Gavelán / Fotear
+      La Casona de Garatea <br /> Jazmín Cuba / Fotear
     </small>
   </div>
 </section>
