--- a/src/sections/aldea/Talleres.astro
+++ b/src/sections/aldea/Talleres.astro
@@ -36,9 +36,13 @@ const workshops = [
     </div>
   </div>
   <div class='relative'>
-    <img src='/images/aldea/cabaña.jpg' alt='la casona de garatea' />
+    <img
+      src='/images/aldea/estacion-del-ferrocarril.jpg'
+      alt='estación del ferrocarril de chimbote'
+    />
     <small class='absolute bottom-4 left-5 text-xs lg:text-sm text-[#eee]'>
-      Escultura en el <br /> bulevar Isla Blanca <br /> David Aguedo / Fotear
+      Segunda nave <br /> de la antigua Estación <br /> del Ferrocarril, <br /> Joan
+      Gavelán / Fotear
     </small>
   </div>
 </section>
