--- a/src/sections/aldea/Beneficios.astro
+++ b/src/sections/aldea/Beneficios.astro
@@ -11,13 +11,9 @@ const benefits = [
 
 <section id='beneficios' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
   <div class='relative order-1 lg:order-none'>
-    <img
-      src='/images/aldea/valle.jpg'
-      alt='complejo arqueológico El Castillo, Chimbote'
-    />
+    <img src='/images/aldea/estatuas.jpg' alt='estatuas de niñas danzando' />
     <small class='absolute bottom-4 left-5 text-xs lg:text-sm text-[#eee]'>
-      El complejo <br /> arqueológico El Castillo, <br /> Chimbote. <br /> David
-      Aguedo / Fotear
+      Escultura en el <br /> bulevar Isla Blanca <br /> David Aguedo / Fotear
     </small>
   </div>
 
