--- a/src/sections/aldea/Beneficios.astro
+++ b/src/sections/aldea/Beneficios.astro
@@ -5,7 +5,9 @@ const benefits = [
   'Talleres gratuitos sobre arquitectura, branding,  cultura y turismo',
   'Participación como protagonista en la conceptualización y diseño arquitectónico de la primera Festividad de Chimbote 2022',
   'Certificado de participación emitido por la Organización  Cultural Chimboteros.',
-  'Conformar un equipo multidisciplinario que desarrolle proyectos de innovación e impacto, con enfoque cultural y turístico.'
+  'Conformar un equipo multidisciplinario que desarrolle proyectos de innovación e impacto, con enfoque cultural y turístico.',
+  'Exoneración de pagos por colegiatura en el Colegio de Arquitectos del Perú, Regional Áncash, durante de la temporada de la primera de edición de Aldea.',
+  'Certificado oficial de participación emitido por el Colegio de Arquitectos del Perú y  Organización Cultural Chimbotero.'
 ]
 ---
 
