remove line height for mobile devices

--- a/src/sections/aldea/Festividad.astro
+++ b/src/sections/aldea/Festividad.astro
@@ -10,7 +10,7 @@
     />
     <em class='w-max block mx-auto mb-8'>4, 5, y 6 dic. 2022</em>
     <p
-      class='text-[14px] md:text-[14.5px] lg:text-[1.1rem] text-justify font-medium leading-6 lg:leading-8'
+      class='text-[14px] md:text-[14.5px] lg:text-[1.1rem] text-justify font-medium lg:leading-8'
     >
       Chimbote, luego de siglos de formación, aún no celebra una fiesta propia,
       emblemática e integradora; que exprese el auténtico significado de su
