--- a/src/sections/aldea/Beneficios.astro
+++ b/src/sections/aldea/Beneficios.astro
@@ -2,12 +2,12 @@
 import Heading from '@/components/aldea/Heading.astro'
 
 const benefits = [
-  'Talleres gratuitos sobre arquitectura, branding,  cultura y turismo',
-  'Participación como protagonista en la conceptualización y diseño arquitectónico de la primera Festividad de Chimbote 2022',
-  'Certificado de participación emitido por la Organización  Cultural Chimboteros.',
-  'Conformar un equipo multidisciplinario que desarrolle proyectos de innovación e impacto, con enfoque cultural y turístico.',
   'Exoneración de pagos por colegiatura en el Colegio de Arquitectos del Perú, Regional Áncash, durante de la temporada de la primera de edición de Aldea.',
-  'Certificado oficial de participación emitido por el Colegio de Arquitectos del Perú y  Organización Cultural Chimbotero.'
+  'Certificado oficial de participación emitido por el Colegio de Arquitectos del Perú',
+  'Certificado de participación emitido por la Organización Cultural Chimboteros.',
+  'Talleres gratuitos sobre arquitectura, branding, cultura y turismo',
+  'Conformar un equipo multidisciplinario que desarrolle proyectos de innovación e impacto, con enfoque cultural y turístico.',
+  'Participación como protagonista en la conceptualización y diseño arquitectónico de la primera Festividad de Chimbote 2022'
 ]
 ---
 
